env/code_53bfbfcccef29/stderr.txt
  File "main.py", line 1
    while(true)
              ^
SyntaxError: invalid syntax
